首页改版1，信纸抽出效果

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     }
 
     /* 去除滚动条 */
-    ::-webkit-scrollbar {
+    /* ::-webkit-scrollbar {
       width: 0 !important;
     }
 
     ::-webkit-scrollbar {
       width: 0 !important;
       height: 0;
-    }
+    } */
 
     *,
     ::before,
